2008-03-20  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (SVN.doVCFull): merge Dustin's patch:
	add --no-auth-cache option to svn invocations to avoid caching
	buildbot's credentials. This also helps when users run a
	buildslave from their personal account, to keep the buildslave
	from clobbering their manually-provided svn password. Closes #188.
	(SVN.doVCUpdate): do it for 'svn update' too.

	* buildbot/steps/shell.py: merge Greg Ward's patch (via Dustin):
	refactor WithProperties handling, allow WithProperties in more
	places. Closes #115.
	* buildbot/process/buildstep.py: same
	* buildbot/steps/transfer.py: same, allow WithProperties in filenames

	* buildbot/steps/trigger.py: remove unused imports to hush pyflakes

	* docs/buildbot.texinfo (Build Properties): fix up nodes+menus

2008-03-19  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/xmlrpc.py (XMLRPCServer.xmlrpc_getAllBuilders):
	merge Etienne Pierre's patch (via Dustin): add new XMLRPC methods.
	(XMLRPCServer.xmlrpc_getStatus): same
	(XMLRPCServer.xmlrpc_getLastBuilds): same, returns the last N
	completed builds for a given Builder

	* buildbot/test/test_config.py (ConfigTest.setUp): merge Dustin's
	patch: suppress DeprecationWarnings in our tests of deprecated
	features that aren't scheduled for removal quite yet. In the long
	run, we'll remove the old features and the tests.

	* NEWS: add a deprecation schedule
	* buildbot/changes/freshcvsmail.py: remove this file, it was
	replaced by mail.FCMaildirSource in the previous release.

	* buildbot/test/runutils.py: set usePTY=False everywhere we aren't
	explicitly testing =True, to avoid SIGHUP-based failures that I
	now see about 10% of the time.

	* buildbot/scheduler.py (Triggerable): merge Dustin's patch: add
	"Triggerable" Schedulers, to start builds at specific phases of
	other builds rather than in response to source code changes or
	periodic timers. These phases are marked by "Trigger" steps, which