@@ -4,41 +4,48 @@ from buildbot.scheduler import Triggerable
 from twisted.internet import defer
 
 class Trigger(LoggingBuildStep):
-    """
-    I trigger a Triggerable.  It's fun.
+    """I trigger a scheduler.Triggerable, to use one or more Builders as if
+    they were a single buildstep (like a subroutine call).
     """
     name = "trigger"
 
     flunkOnFailure = True
 
-    def __init__(self,
-        schedulers=[],
-        updateSourceStamp=False,
-        waitForFinish=False,
-        **kwargs):
+    def __init__(self, schedulerNames=[], updateSourceStamp=True,
+                 waitForFinish=False, **kwargs):
         """
         Trigger the given schedulers when this step is executed.
 
-        @var schedulers: list of schedulers' names that should be triggered.  Schedulers
-        can be specified using WithProperties, if desired.
+        @param schedulerNames: A list of scheduler names that should be
+                               triggered. Schedulers can be specified using
+                               WithProperties, if desired.
 
-        @var updateSourceStamp: should I update the source stamp to
-        an absolute SourceStamp before triggering a new build?
+        @param updateSourceStamp: If True (the default), I will try to give
+                                  the schedulers an absolute SourceStamp for
+                                  their builds, so that a HEAD build will use
+                                  the same revision even if more changes have
+                                  occurred since my build's update step was
+                                  run. If False, I will use the original
+                                  SourceStamp unmodified.
 
-        @var waitForFinish: should I wait for all of the triggered schedulers to finish
-        their builds?
+        @param waitForFinish: If False (the default), this step will finish
+                              as soon as I've started the triggered
+                              schedulers. If True, I will wait until all of
+                              the triggered schedulers have finished their
+                              builds.
         """
-        assert schedulers, "You must specify a scheduler to trigger"
-        self.schedulers = schedulers
+        assert schedulerNames, "You must specify a scheduler to trigger"
+        self.schedulerNames = schedulerNames
         self.updateSourceStamp = updateSourceStamp
         self.waitForFinish = waitForFinish
         self.running = False
         LoggingBuildStep.__init__(self, **kwargs)
-        self.addFactoryArguments(schedulers=schedulers,
+        self.addFactoryArguments(schedulerNames=schedulerNames,
                                  updateSourceStamp=updateSourceStamp,
                                  waitForFinish=waitForFinish)
 
     def interrupt(self, reason):
+        # TODO: this doesn't actually do anything.
         if self.running:
             self.step_status.setColor("red")
             self.step_status.setText(["interrupted"])
@@ -47,15 +54,22 @@ class Trigger(LoggingBuildStep):
         self.running = True
         ss = self.build.getSourceStamp()
         if self.updateSourceStamp:
-            ss = ss.getAbsoluteSourceStamp(self.build.getProperty('got_revision'))
+            got = None
+            try:
+                got = self.build.getProperty('got_revision')
+            except KeyError:
+                pass
+            if got:
+                ss = ss.getAbsoluteSourceStamp(got)
         # (is there an easier way to find the BuildMaster?)
         all_schedulers = self.build.builder.botmaster.parent.allSchedulers()
         all_schedulers = dict([(sch.name, sch) for sch in all_schedulers])
         unknown_schedulers = []
         triggered_schedulers = []
 
+        # TODO: don't fire any schedulers if we discover an unknown one
         dl = []
-        for scheduler in self.schedulers:
+        for scheduler in self.schedulerNames:
             if isinstance(scheduler, WithProperties):
                 scheduler = scheduler.render(self.build)
             if all_schedulers.has_key(scheduler):
@@ -85,6 +99,8 @@ class Trigger(LoggingBuildStep):
         else:
             d = defer.succeed([])
 
+        # TODO: review this shadowed 'rc' value: can the callback modify the
+        # one that was defined above?
         def cb(rclist):
             rc = SUCCESS
             for was_cb, buildsetstatus in rclist:
